Addressing PR comments.
Signed-off-by: mgoelswirlds <mugdha.goel@swirldslabs.com>